Fix alignment of form submit button component. No longer floating it.

--- a/components/form/form-submit-button.styl
+++ b/components/form/form-submit-button.styl
@@ -3,7 +3,6 @@
 	margin-right: 0
 	width: 20px
 	overflow: hidden
-	float: right
 	transition: opacity 300ms, width 300ms
 
 	&.ng-enter
